--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="card grey lighten-5">
     <div class="card-content">
-      <span class="card-title">{{ .Title }} {{ .Date.Format "Mon Jan 2, 2006" }}</span>
+      <span class="card-title">{{ .Title }} - {{ .Date.Format "Mon Jan 2, 2006" }}</span>
       {{ .Content }}
   </div>
 </div>
