layouts/partials/header.html:
Add a meta tag to add a description.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ "css/materialize.min.css" | absURL }}">
     <link rel="stylesheet" href="{{ "css/custom.css" | absURL }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="{{ .Site.Params.Description }}" />
 </head>
 <body>
     <header>
